seperate schema from model desciption file
